--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -158,7 +158,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. This trend is mediated by foliage LAI and density, where the gradient is more prounced in broad-leaf forests than needle-leaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b; Chazdon & Fetcher, 1984; Smith et al., 2019; Tymen et al., 2017]. This is seen in tropical forest floors that receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], and mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006], compared to needle-leaf forest floors that receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute sunflecks to shaded forest regions that receive ~1/3 of their carbon during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
+Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. This trend is mediated by foliage LAI and density, where the gradient is more prounced in broad-leaf forests than needle-leaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b; Chazdon & Fetcher, 1984; Smith et al., 2019; Tymen et al., 2017].Therefore, light reaching forest floors that is incident to canopy tops can range from approximately 1-2% in tropical forest floors  [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], 4-5% in mixed-wood boreal and northern temperate [@bartemucciOverstoryInfluencesLight2006], to 17-34% in needle-leaf forests [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute sunflecks to shaded forest regions that receive ~1/3 of their carbon during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
@@ -168,7 +168,7 @@ Across all **#** forested NEON sites, wind speeds increased with height, with da
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies is greater under dense-canopy forests than open-canopy forests [*Defrenne et al. 2021*]. Greater temperature offsets by dense forests allows them to maintain daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than pine and boreal forests, nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests tend to maintain higher daytime maximum temperature in the understory that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009] and  warmer nighttime understory temperatures than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering is greater under dense-canopy forests than open-canopy forests [*Defrenne et al. 2021*]. Therefore, dense forests maintain daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than pine and boreal forests, nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests tend to maintain higher daytime maximum temperature in the understory that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009] and  warmer nighttime understory temperatures than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
 
 Seasonally, buffering capacity increases with water availablity [@davis_microclimatic_2019] and is greater in wet than dry season, in tropical and temperate forests [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. However, under colder conditions, dense forest canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-forests and nearby clearings [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate] where greater radiative heat loss in exposed areas results in lower $T_{min}$. 
 
@@ -176,7 +176,7 @@ Tree height also plays a role in buffering where trees upto 20m with higher LAI 
 
 ### Humidity and evaporative demand
 **Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
-Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity [RH] in the below-canopy compared low LAI forests and to nearby open areas. This trend is greater in wetter conditions, in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit (VPD), an important metric expressing the driving force of water loss from a leaf.  Tropical forests during the wet season tend to have higher VPD, therefore greater evaporative demand, in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
+Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity [RH] below-canopy compared to open forests and nearby open areas. This trend is greater in wetter conditions, in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit (VPD), an important metric expressing the driving force of water loss from a leaf.  Tropical forests during the wet season tend to have higher VPD, therefore greater evaporative demand, in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
 
 ### Carbon dioxide
 
@@ -184,7 +184,8 @@ Along with temperature, dense-canopy forests maintain higher daily maximum relat
 Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
 
 ### Geographic and climatic factors
-The strength of buffering also varies substantially with topography, climate and distance to waterbodies [@zellweger_seasonal_2019] where buffering capacity decreases with altitude, moving to open-forests  [@vonarxSpatiotemporalEffectsForest2012a; @rajsnerovaMorphologicalBiochemicalPhysiological2015; @liangForestTypeHeight2019]  and increases with wetter than drier regions [**REF**] and proximity to water such as in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
+
+The strength of buffering decreases with altitude, moving to open-forests  [[@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @rajsnerovaMorphologicalBiochemicalPhysiological2015; @liangForestTypeHeight2019], increases with wetter than drier regions [**REF**] and proximity to water such as in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
 
 
 ## Leaf temperature 
@@ -199,7 +200,7 @@ $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf tra
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-Leaf temperature (and thermoregulation) is a tradeoff between water use strategy and optimum leaf temperature [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. Stomatal conductance ($g_s$)  largely influences $T_{leaf}$ by facilitating heat dissipation, whereas leaf water content affects the rate of leaf warming [@kochDiurnalPatternsLeaf1994a; @fauset_differences_2018]. With sufficient $g_s$ leaves can regulate their temperature in relation to their biophysical environment, but limitation to $g_s$, driven by irradiance, VPD or drought curbs heat dissipation, drastically increasing leaf temperature. 
+Leaf thermoregulation is a tradeoff between water use strategy and optimum leaf temperature [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]where stomatal conductance ($g_s$)  largely influences $T_{leaf}$ by facilitating heat dissipation, and leaf water content affects the rate of leaf warming [@kochDiurnalPatternsLeaf1994a; @fauset_differences_2018]. With sufficient $g_s$ leaves can regulate their temperature even in biophysical environment [**REF**], but limitation to $g_s$, driven by irradiance, $T_{air}$, VPD or drought curbs heat dissipation, drastically increasing leaf temperature. 
 
 Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$. With maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, but $g_s$ limitation can cause solar radiation to substantially elevate $T_{leaf}$ greater than $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
 
@@ -208,37 +209,35 @@ Greater upper canopy wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
 While stomatal conductance is inherently greater in exposed leaves than buffered shaded leaves, factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--are also greater with exposure. As a result, exposed leaves can experience steeper $g_s$ limitation than buffered leaves, driving an increase in $T_{leaf}$, further influenced by irradiance and $T_{air}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, due to inherently lower $g_s$ in shade leaves, they can remain cooler under buffered conditions and substantially warmer under exposed conditions. 
 
-**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.**  Smaller leaves have higher $g_{a}$ to heat transfer, therefore remain within a few degrees of $T_{air}$,  *with coolest leaves at intermediate sizes (~10mm)* [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017]. Whereas, regardless of $g_s$, large leaves (with greater leaf width) can be significantly cooler than T_air under low radiation with stomata open, and significantly hotter under high radiation or $T_{air}$ with stomata closed  [@leighInfluenceLeafSize2017; @fauset_differences_2018].
+**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.**  Smaller leaves remain within a few degrees of $T_{air}$,  *with coolest leaves at intermediate sizes (~10mm)* due to higher $g_{a}$ to heat transfer [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017]. Whereas, large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open, and significantly hotter under high radiation or $T_{air}$ with stomata closed  [@leighInfluenceLeafSize2017; @fauset_differences_2018].
 
 ### In-situ observations
 **Vertical profiles in microclimate (Fig. `r fig_NEON_vertical`), leaf traits (see following section), and *evapotranspiration* (*where is this discussed? and do we say anything about evaporation?*) together shape in-situ leaf temperatures according to the principles outlined above (Fig. `r fig_leaf_T`).** 
-Canopy buffering capacity and biophysical gradient affect vertical distribution of leaf temperature. 
+Vertical distribution of leaf temperature is dependent on canopy buffering capacity and the biophysical gradient. 
 
-Open-forests with lower LAI or buffering capacity, can have greater lower canopy $T_{leaf}$ than upper canopy, reflecting microclimate conditions of vertical air mixing, heating from the ground, light permeating through canopy layers and still air in the lower canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. In other conditions, increase in relative humidity can increase inner canopy $T_{leaf}$  relatively more than above canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. Similarly, open trees growing close to the ground can experience greater heat stress and $T_{air}$ in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+Particularly, open-forests with buffering capacity can have greater lower canopy $T_{leaf}$ than upper canopy, reflecting microclimate conditions of vertical air mixing, heating from the ground, light permeating through canopy layers and still air in the lower canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. In other conditions, increase in inner canopy relative humidity can increase $T_{leaf}$  relatively more than above canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. Similarly, open trees growing close to the ground can experience greater heat stress and $T_{air}$ in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
-**However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** Especially in closed-canopy forests with increased buffering capacity, large $T_{leaf} - T_{air}$ increases with height where higher $T_{leaf}$ are found in the upper canopies than lower canopies, caused by midday stomatal closure [Slot et al. 2019]. This is seen in tropical forests [@fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a], semi-deciduous tropical forest during the wet season [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a]. 
+**However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** In closed-canopy forests with increased buffering capacity, large $T_{leaf} - T_{air}$ increases with height where higher $T_{leaf}$ are found in the upper canopies than lower canopies, due to midday stomatal closure [Slot et al. 2019]. This is seen in tropical forests [@fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a], semi-deciduous tropical forest during the wet season [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a]. 
 
-Greater light input in exposed upper canopy leaves can exceed $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$ making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. Across forest types, temperate deciduous upper canopy $T_{leaf}$ - $T_{air}$ was observed to be greater than upper canopies of tropical moist and wet [@mauTemperateTropicalForest2018a]
+Greater light input in exposed upper canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$ making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. Across forest types, temperate deciduous upper canopy $T_{leaf}$ - $T_{air}$ has shown to be greater than $T_{leaf}$ - $T_{air}$ of upper canopy tropical moist and wet [@mauTemperateTropicalForest2018a].
 
 
 ### Leaf traits 
 
-**Leaf thermoregulation is mediated by leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light and water demand, in order to optimize C uptake, thermoregulate and balance metabolism, across forest vertical strata, and thus show different degrees foliar plasticity [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
+**Leaf thermoregulation is mediated by leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], in order to optimize C uptake. Therefore, are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) across forest vertical strata (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`)[@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
 
 #### *(clarify light vs height - 1 paragraph)*
 
-Leaf morphological adaptation to the local microenvironement takes place during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004]. Degrees of direct to diffused light and consequental water demands shape sun vs. shade leaves and their necessary vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. Therefore, exposed sun leaves are typically smaller in size and width, thicker, hairier and have greater lobation, and buffer biophysical conditions for shade leaves. Whereas shade leaves adapt to diffused light and stable microenvironment through investing in light capture efficiency by expanding specific leaf area (SLA) [@zwienieckiHydraulicLimitationsImposed2004; @rozendaalPlasticityLeafTraits2006; @mathurPhotosyntheticEfficiencySun2018a]. Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. Since canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`) it is unsuprising, then, that leaf traits vary dramatically across vertical gradients. 
+Leaf morphological adaptation to the local microenvironement takes place during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004]. Degrees of direct to diffused light and consequental water demands shape sun vs. shade leaves and their necessary vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. Since canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`) it is unsuprising, then, that leaf traits vary dramatically across vertical gradients. 
 
-While light based acclimation in leaf traits is well established, research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
+While light based acclimation in leaf traits is well established, research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light.However, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
-Under constant light conditions (photon flux density), increase in height (>35m) showed decrease in canopy stomatal conductance, along with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Adaptations to increasing height and hydraulic contraints show that leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] tend to decrease, whereas leaf mass per area (at greater than 20m) tends to increase [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
+Isolating height (>35m) under constant light conditions (photon flux density) canopy stomatal conductance decreases along with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
 
 Disentangling the influences of hydraulic constraints, light, and other biophysical drivers that vary with height (Fig. `r fig_NEON_vertical`) on leaf form and function remains an important area for research, but is beyond the scope of the current review.
+Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.
 For the purposes of interpreting the results presented here, we note that patterns across light and height gradients age generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
-
-*(The following notes need to be condensed/ worked into the paragraph above or discussion of specific traits. No need to get very specific (listing species studied, traits)--what we want is generalization. The goal is to answer the question, "Do we expect light gradients to be equivalent to height gradients, or is there variation attributable to height that is not captured by light gradients?")*
-
 
 #### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
 
@@ -249,11 +248,9 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-individuals exposed canopies substanially buffer inner and lower canopies from light and biophysical conditions. Thus leaf traits in canopy positions vary accordingly [@casasSunShadeLeaves2011]. Several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+Within-individuals going from buffered and shaded canopy positions to exposed positions, leaf traits vary on the basis of biophysical demands [@casasSunShadeLeaves2011] and therefore exhibit commonly observed patterns in leaf anatomical, structural and biochemical traits at an intra-canopy gradient, pointed by several studies [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These observations contribute to [understanding] leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
-Additionally, given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [@keenanGlobalLeafTrait2016], such as by incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient, partly because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020]. 
-
-*(Krista: the above paragraaph is really interesting, and I like the idea of starting off the section by mentioning what controls the formation of leaf traits. However, I think it gets into more detail than needed. Also, is there work out there on how they're influenced by temperature/ water at the time of formation? I'd broaden to include the full microenviroment (without increasing length)*)
+However, while a majority of relevant research have focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves, given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [@keenanGlobalLeafTrait2016], such as by incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient, partly because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020]. 
 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
@@ -269,17 +266,16 @@ nocite: |
 
 #### Morphological traits
 
-Along the vertical gradient, exposed leaves are better equipped to dissapate heat than shaded leaves, through adaptive traits such as smaller leaf size, leaf dissections--lobes and serration-- decrease effective leaf width and therefore increase the rate of heat convection per unit area between leaf and air. [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Mechanisms such vertical leaf angles and temporary wilting reduce surface light exposure and lower leaf temperature in exposed canopies [Ishida et al. 1999; @niinemetsAdjustmentFoliageStructure1998]. Hydraulic traits, for example leaf vein and stomtal density, also help maintain a balance photosynthesis and thermoregulation, in the high light environment of exposed canopies [Brodribb et al. 2010]. On the other hand, leaf temperature increases with effective leaf width and leaf size [@fauset_differences_2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance, and lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, shade leaves that typically have greater leaf size and effective leaf width compared to sun leaves, remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017]. Additionally, understory leaves tend to open their stomata wider (stomatal apeture) than upper canopy leaves [@kosugiSeasonalFluctuationsTemperature2006]. 
+Going from shaded to exposed canopy position, morphological adaptation to dissapate heat increases. Sun leaves are often thicker, smaller, hairier, with greater dissection--lobes and serration--[@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with more vertical leaf angles than shade leaves [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. On the other hand, because shaded leaves have greater effective leaf width [@fauset_differences_2018], boundary layer thickness, stomatal resistance and therefore longer thermal time constant, they exhibit lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019]. Thus, shade leaves remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017]
 
 #### Biochemical and physiological traits
 
-Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks under available soil nitrogen conditions [@kitaoCanopyNitrogenDistribution2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up and thus shows variable results [@poorterMetaanalysisPlantResponses2019a]  
+Nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks under available soil nitrogen conditions [@kitaoCanopyNitrogenDistribution2018]. Therefore, during growing season, $N_{area}$, along with LMA, leaf soluble sugars, starch and non-structural carbons increase with exposure [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. $P_{area}$ follows a similar trend, but with increased growth at higher light P uptake in some cases cannot keep up and thus shows variable results [@poorterMetaanalysisPlantResponses2019a]  
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
-Proportional to vertical light gradients at an intra- and inter-species level, sun exposed leaves have greater pools of xanthophyll pigments, comprised of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] than in shaded leaves. [$VAZ$]--an antioxidant scavenging function--protects against cellular damage by converting excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
+Pools of xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$],an antioxidant scavenging function--plays a role in protecting against cellular damage by converting excess light into heat energy dissipation, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998].Therefore, $VAZ$ increases proportional to vertical light gradients. 
   
-
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
 
@@ -289,18 +285,13 @@ Proportional to vertical light gradients at an intra- and inter-species level, s
 
 ##### *Deciduousness*
 
-Deciduousness as a leaf trait is an adaptation to water stress therefore can influence biophysical gradient and leaf temperature distribution during leaf-loss [@rey-sanchez_spatial_2016]. *Among species that can be deciduous, greater proportion of deciduous individuals in larger size classes that also tend to lose their leaves than understory species that are seldom deciduous in the tropics. Deciduous species are also more prominent in drier sites compared to wet sites [@conditQuantifyingDeciduousnessTropical2000b]* 
+Deciduousness as a leaf trait is an adaptation to water and heat stress. Therefore, can influence biophysical gradient and leaf temperature distribution during leaf-loss [@rey-sanchez_spatial_2016]. *In the tropics, among species that can be deciduous, greater proportion of deciduous individuals are in larger size classes that tend to lose their leaves more than understory species that are seldom deciduous. Deciduous species are also more prominent in drier sites compared to wet sites [@conditQuantifyingDeciduousnessTropical2000b]* 
 
 *Spring and fall leaf phenology in temperate deciduous forests (Augsburger).* Leaf emergence in deciduous forests is increasing delayed with height-ontogeny where understory species leaf-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
 
-### Interspecific varaiation 
+### Interspecific variation 
 
-Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment, as observed and similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Isolating ontogeny, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, differences in traits show significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels and therefore influence leaf temperatures.As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
-
-*from Martijn in Tleaves figure: One thing that might be more relevant in tropical than in seasonal temperate forests, is the issue I mentioned before about the difference between shade leaves of canopy trees and leaves of understory species. The understory species in the tropics (the ones that won't necessarily make it to the canopy, and can reproduce in the understory) appear to invest more in leaf longevity than in light harvesting per se, so even though they are in the shade, they do not have large leaves with low LMA. This would be a deviation on, or a special case of, the understory parameters you are using now. I don't think we necessarily need to incorporate that in this figure, but I think it would be useful to be able to say that for understory species with small, high LMA leaves the effects of windspeed, radiation, RH, etc, are greater/smaller than for the understory species parameters in the figure. DOes this make sense? Is this relevant at all for seasonal forests? The only thing that comes to mind is Ilex, but maybe there are other species?*
-
- *(KAT: a lot of this content should probably move up the the intro to this section)*
-
+Across tree-size ontogeny of the same species, while fundamental adaptations to light and water are observed in canopy and understory trees similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012], LMA, photosynthetic capcity per area, and stomatal conductance increases with height compared to saplings, under constant light conditions [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory pasticity to light and biophysical condition differs along with inherent traits such as leaf shape, size, $gs$ levels and therefore influences $T_{leaf$. As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
 
 ##### Isoprene production
 -  Isoprene production *capability* as a trait 
